[gd_scene load_steps=15 format=3 uid="uid://b8msl4kqjlhan"]

[ext_resource type="Script" uid="uid://43uec7mcm20v" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://dua44e6q1q1yx" path="res://scripts/camera_control.gd" id="2_tefeu"]
[ext_resource type="Shader" uid="uid://rvlykcwcwovh" path="res://shaders/space_sky.gdshader" id="3_choun"]
[ext_resource type="PackedScene" uid="uid://b3dnbvtjgt0fw" path="res://scenes/tile_board.tscn" id="3_jyhfs"]
[ext_resource type="Script" uid="uid://cs3kgqtfo1kyb" path="res://scripts/minerals.gd" id="3_sugp2"]
[ext_resource type="Script" uid="uid://bknoja7kjw7tr" path="res://scripts/minerals_hud.gd" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://bkopvmx0jqqr4" path="res://scripts/power_ups_hud.gd" id="5_tbgi4"]
[ext_resource type="Script" uid="uid://e1q6bkscns61" path="res://scripts/shards_hud.gd" id="7_o6xl0"]
[ext_resource type="Script" uid="uid://bei0j3oubrsgj" path="res://scripts/TurretButton.gd" id="8_85g3d"]
[ext_resource type="Script" uid="uid://b6g4nad2dhfv4" path="res://scripts/BuildManager.gd" id="8_tipki"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ya4ey"]
shader = ExtResource("3_choun")
shader_parameter/space_tint = Vector3(0.9, 0.96, 1)
shader_parameter/star_density = 0.095
shader_parameter/star_cutoff = 0.985
shader_parameter/star_brightness = 1.25
shader_parameter/twinkle_speed = 0.35
shader_parameter/twinkle_amount = 0.2
shader_parameter/band_dir = Vector3(0.2, 0.4, 0.9)
shader_parameter/band_strength = 0.22
shader_parameter/horizon_fade = 0.0

[sub_resource type="Sky" id="Sky_eb6dy"]
sky_material = SubResource("ShaderMaterial_ya4ey")

[sub_resource type="Environment" id="Environment_trceg"]
background_mode = 2
background_energy_multiplier = 1.5
sky = SubResource("Sky_eb6dy")
ambient_light_source = 3
ambient_light_energy = 0.6
tonemap_mode = 3
tonemap_exposure = 0.6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_size = 10

[node name="Main" type="Node"]
script = ExtResource("1_0wfyh")
main_menu_path = "uid://dwdo6442wh28n"

[node name="OverheadCamera" type="Camera3D" parent="."]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 9, 12, 16)
current = true
script = ExtResource("2_tefeu")
tile_board_path = NodePath("../TileBoard")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, -1, 3.09086e-08, -3.09086e-08, 15.0105, 15, -0.0108695)
light_color = Color(0.654902, 0.788235, 1, 1)
light_indirect_energy = 0.8
light_specular = 0.8
shadow_enabled = true
shadow_bias = 0.02
shadow_normal_bias = 0.6
shadow_reverse_cull_face = true
shadow_opacity = 0.65

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_trceg")

[node name="TileBoard" parent="." instance=ExtResource("3_jyhfs")]

[node name="Minerals" type="Node" parent="."]
script = ExtResource("3_sugp2")

[node name="PowerUpsHUD" type="CanvasLayer" parent="."]
script = ExtResource("5_tbgi4")

[node name="GridContainer" type="GridContainer" parent="PowerUpsHUD"]
offset_right = 40.0
offset_bottom = 40.0
columns = 2

[node name="GameOver" type="Control" parent="."]
visible = false
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameOver/CenterContainer"]
custom_minimum_size = Vector2(280, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tipki")

[node name="MarginContainer" type="MarginContainer" parent="GameOver/CenterContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/CenterContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="GameOver/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Defeated!"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="GameOver/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="MenuButton" type="Button" parent="GameOver/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="HUDLeft" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 8

[node name="MineralsHUD" type="Control" parent="HUDLeft"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2
script = ExtResource("4_jyhfs")
value_label_path = NodePath("ValueLabel")

[node name="ValueLabel" type="Label" parent="HUDLeft/MineralsHUD"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 103.0
offset_bottom = 31.0
text = "\"Minerals: 0\""

[node name="ShardsHUD" type="HBoxContainer" parent="HUDLeft"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("7_o6xl0")

[node name="Amount" type="Label" parent="HUDLeft/ShardsHUD"]
layout_mode = 2

[node name="BuildManager" type="Node" parent="." groups=["build_manager"]]
script = ExtResource("8_tipki")

[node name="BuildUI" type="CanvasLayer" parent="."]
layer = 50

[node name="HUDRoot" type="Control" parent="BuildUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Toolbar" type="HBoxContainer" parent="BuildUI/HUDRoot"]
layout_mode = 0
offset_left = 16.0
offset_top = 56.0
offset_right = 24.0
offset_bottom = 64.0

[node name="TurretButton" type="Button" parent="BuildUI/HUDRoot/Toolbar"]
layout_mode = 2
text = "Turret"
script = ExtResource("8_85g3d")

[node name="SniperButton" type="Button" parent="BuildUI/HUDRoot/Toolbar"]
layout_mode = 2
text = "Sniper"
script = ExtResource("8_85g3d")
action_name = "sniper"

[node name="TeslaButton" type="Button" parent="BuildUI/HUDRoot/Toolbar"]
layout_mode = 2
text = "Tesla"
script = ExtResource("8_85g3d")
action_name = "tesla"

[node name="MortarButton" type="Button" parent="BuildUI/HUDRoot/Toolbar"]
layout_mode = 2
text = "Heavy"
script = ExtResource("8_85g3d")
action_name = "mortar"

[node name="MinerButton" type="Button" parent="BuildUI/HUDRoot/Toolbar"]
layout_mode = 2
text = "Miner"
script = ExtResource("8_85g3d")
action_name = "miner"

[node name="ShardButton" type="Button" parent="BuildUI/HUDRoot/Toolbar"]
layout_mode = 2
text = "Shard Miner"
script = ExtResource("8_85g3d")
action_name = "shard_miner"

[node name="WallButton" type="Button" parent="BuildUI/HUDRoot/Toolbar"]
layout_mode = 2
text = "Wall"
script = ExtResource("8_85g3d")
action_name = "wall"

[connection signal="resized" from="GameOver" to="GameOver" method="_on_resized"]
